# sozu

./: Cargo.toml
command/src/: state.rs
confw/: Cargo.toml  applications.toml
confw/assets/: applications.toml
confw/src/: main.rs  watcher.rs
