[package]
name = "sozuconfw"
description = "command line application to autoconfigure routing"
repository = "https://github.com/sozu-proxy/sozu"
readme = "README.md"
documentation = "https://docs.rs/sozuconfw"
homepage = "http://sozu.io"
version = "0.2.0"
license = "AGPL-3.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
categories = ["network-programming"]

[dependencies]
clap = "^2.19.0"
notify = "^4.0.0"
sozu-lib = { version = "^0.2", path = "../lib" }
sozu-command-lib = { version = "^0.2", path = "../command" }

[dependencies.toml]
version = "^0.4"
default-features = false
features = ["serde"]